# covenant

./: CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  GOVERNANCE.md  LIBRARIES.md  MAINTAINERS.md  README.md  SECURITY.md  STANDARDS.md  SUPPORT.md  cabal.project  covenant.cabal  install-pre-commit
.github/workflows/: covenant.yml
hooks/: pre-commit
notes/: ledger-types-simplified.txt  ledger-types-with-comments.txt
src/Control/Monad/: Action.hs  HashCons.hs  Unify.hs
src/Covenant/: ASG.hs  ASGNode.hs  Constant.hs  Data.hs  DeBruijn.hs  Expr.hs  ExprType.hs  Index.hs  JSON.hs  Ledger.hs  Pretty.hs  Prim.hs  Term.hs  Test.hs  Type.hs  Util.hs  Zipper.hs
src/Covenant/Internal/: ASG.hs  ASGBuilder.hs  ASGNode.hs  ASGType.hs  Arg.hs  Data.hs  Expr.hs  ExprBuilder.hs  ExprGen.hs  KindCheck.hs  Ledger.hs  PrettyPrint.hs  PrimType.hs  Rename.hs  Strategy.hs  Term.hs  TyExpr.hs  Type.hs  Unification.hs
src/Data/: Wedge.hs
src/covenant/Covenant/: ASG.hs
src/monad-hash-cons/Control/Monad/: HashCons.hs
test/asg/: Main.hs
test/base-functor/: Main.hs
test/bb/: Main.hs
test/json-conformance/: Main.hs  conformance_case_1.json  conformance_case_2.json
test/kindcheck/: Main.hs
test/monad-unify/: Main.hs
test/primops/: Main.hs
test/renaming/: Main.hs
test/type-applications/: Main.hs
